# morrocan-finantial-data

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
docs/: 00_PROJECT_OVERVIEW.md  01_ARCHITECTURE.md  02_DATABASE_SCHEMA.md  03_SOURCES_AND_COLLECTORS.md  04_BVC_PRICE_COLLECTOR.md  05_BVC_PRICE_NORMALIZER.md  06_BVC_REAL_PAYLOAD_VALIDATION.md  07_PIPELINE_RUNNER.md  08_BVC_PAGINATION_AND_TIMESTAMP.md  09_BVC_MULTIPAGE_COLLECTION.md  10_BVC_LIVE_MULTIPAGE_COLLECTOR.md  11_BVC_SSL_AND_LIVE_RUN_VALIDATION.md  12_NORMALIZED_DATA_API.md  13_BVC_DIAGNOSTICS_GROUP_TOTALS_FIX.md  14_BVC_LIVE_HTTP_TIMEOUT_INVESTIGATION.md  15_BVC_LIVE_MISSING_PRICE_REVIEW.md  16_BVC_DATA_QUALITY_AND_IDEMPOTENCY_CONTRACT.md  17_BVC_TARGET_SCHEMA_AND_MIGRATION_PLAN.md  18_POSTGRESQL_MIGRATION_TESTING.md  19_COLLECTION_AUDIT_FOUNDATION_MIGRATION.md  20_PAGE_SELECTION_AND_PROCESSING_ATTEMPTS_MIGRATION.md  21_RAW_FIRST_OCCURRENCE_DUAL_WRITE.md  REPOSITORY_REENTRY_REPORT_2026-07-16.md
fixtures/bvc_prices/: dated_market_listing.html  no_timestamp_market_listing.html  paginated_market_listing.html  sample_market_listing.html
migrations/: env.py
migrations/versions/: 0001_initial_foundation.py  0002_add_collection_audit_foundation.py  0003_add_page_selection_and_processing_attempts.py
scripts/: seed.py
src/tradehub_data/: __init__.py
tests/: __init__.py  conftest.py  test_sqlite_audit_identity_fixture.py
tests/api/: test_bvc_market.py  test_health.py
tests/collectors/: test_bvc_price_client.py  (+2 more)
(+88 files in other folders)
