[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradehub-data"
version = "0.1.0"
description = "Financial data infrastructure foundation for TradeHub."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "beautifulsoup4>=4.12",
    "fastapi>=0.110",
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
tradehub-data-api = "tradehub_data.api.app:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "postgres: tests that require an explicitly configured isolated PostgreSQL test database",
]
